Updating user profile i.e name and email
