# src/routes/user.router.js
@@ -8,6 +8,7 @@ const {
   logout,
   logoutAll,
   getUserProfile,
+  updateUserProfile,
 } = require("../controllers/user.controller");
 
 // User middleware
@@ -20,5 +21,6 @@ router.route("/email/confirm/:token").get(confirmEmail);
 router.route("/logout").get(isLoggedIn, logout);
 router.route("/logout/all").get(isLoggedIn, logoutAll);
 router.route("/profile").get(isLoggedIn, getUserProfile);
+router.route("/profile/update").patch(isLoggedIn, updateUserProfile);
 
 module.exports = router;
